[package]
name = "fractyl-renderer"
description="Fractyl is a system for creating game statistic cards. It uses Figma as a design tool and generates SVG templates that can be filled in with data at render time."
homepage = "https://github.com/Luciism/fractyl-renderer"
repository = "https://github.com/Luciism/fractyl-renderer"
readme = "README.md"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

keywords = ["rendering", "svg", "figma", "fractyl", "templating"]
categories = ["graphics", "template-engine"]

version = "0.1.3"
edition = "2024"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
resvg = "0.46.0"
serde_json = "1.0.149"
log = "0.4.29"
image = "0.25.9"
tokio = { version = "1.49.0", features = ["full"] }
axum = { version = "0.8.8", features = ["json"]}
axum_typed_multipart = {version = "0.16.5", features = ["default"]}
lazy_static = "1.5.0"
regex = "1.12.3"
